--- a/docs/components/customization/user-profile-custom-pages.mdx
+++ b/docs/components/customization/user-profile-custom-pages.mdx
@@ -3,13 +3,15 @@ title: Customize User Profile
 description: How to add custom pages to the `<UserProfile />` component
 ---
 
-# `<UserProfile.Page />`
+# Custom pages in User Profile
+
+## `<UserProfile.Page />`
 
 The `<UserProfile />` component supports the addition of custom pages. These custom pages can be rendered inside the `<UserProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
 
 To add a custom page, use the `<UserProfile.Page />` component.
 
-## Usage
+### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
@@ -17,21 +19,21 @@ To add a custom page, use the `<UserProfile.Page />` component.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
-            'use client';
+            "use client";
 
             import { UserProfile } from "@clerk/nextjs";
             import { CustomProfilePage, CustomTerms } from "../components";
             import { CustomIcon } from "../icons";
 
             const UserProfilePage = () => (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                    <CustomProfilePage />
-                </UserProfile.Page>
-                <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                    <CustomTerms />
-                </UserProfile.Page>
-            </UserProfile>
+                <UserProfile path="/user-profile" routing="path">
+                    <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+                        <CustomProfilePage />
+                    </UserProfile.Page>
+                    <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+                        <CustomTerms />
+                    </UserProfile.Page>
+                </UserProfile>
             );
 
             export default UserProfilePage;
@@ -43,14 +45,14 @@ To add a custom page, use the `<UserProfile.Page />` component.
             import { CustomIcon } from "../icons";
 
             const UserProfilePage = () => (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
-                    <CustomProfilePage />
-                </UserProfile.Page>
-                <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
-                    <CustomTerms />
-                </UserProfile.Page>
-            </UserProfile>
+                <UserProfile path="/user-profile" routing="path">
+                    <UserProfile.Page label="Custom Page" labelIcon={<CustomIcon />} url="custom-page">
+                        <CustomProfilePage />
+                    </UserProfile.Page>
+                    <UserProfile.Page label="Terms" labelIcon={<CustomIcon />} url="terms">
+                        <CustomTerms />
+                    </UserProfile.Page>
+                </UserProfile>
             );
 
             export default UserProfilePage;
@@ -101,7 +103,7 @@ To add a custom page, use the `<UserProfile.Page />` component.
     </Tab>
 </Tabs>
 
-## Props
+### Props
 
 All props below are required.
 
@@ -113,11 +115,13 @@ All props below are required.
 | `children` | `React.ReactElement` | The components to be rendered as content inside the custom page. |
 
 
-# `<UserProfile.Link />`
+
+
+## `<UserProfile.Link />`
 
 In addition to custom pages, you can add external links to the `<UserProfile />` navigation sidebar using the `<UserProfile.Link />` component.
 
-## Usage
+### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
@@ -125,7 +129,7 @@ In addition to custom pages, you can add external links to the `<UserProfile />`
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
-            'use client';
+            "use client";
 
             import { UserProfile } from "@clerk/nextjs";
             import { CustomIcon } from "../icons";
@@ -186,7 +190,7 @@ In addition to custom pages, you can add external links to the `<UserProfile />`
 </Tabs>
 
 
-## Props
+### Props
 
 All props below are required.
 
@@ -197,13 +201,13 @@ All props below are required.
 | `url` | `string` | The absolute or relative url to navigate to |
 
 
-# Advanced use cases
+## Advanced use cases
 
-## Reordering Default Routes
+### Reordering Default Routes
 
 If you want to reorder the default routes (`Account` and `Security`) in the `UserProfile` navigation sidebar, you can use the `<UserProfile.Page />` component with the `label` prop set to `'account'` or `'security'`. This will target the existing default page and allow you to rearrange it.
 
-## Usage
+### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
@@ -211,21 +215,21 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
-            'use client';
+            "use client";
 
             import { UserProfile } from "@clerk/nextjs";
             import { MyCustomPageContent } from "../components";
             import { CustomIcon, Icon } from "../icons";
 
             const UserProfilePage = () => (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                    <MyCustomPageContent />
-                </UserProfile.Page>
-                <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                <UserProfile.Page label="account" />
-                <UserProfile.Page label="security" />
-            </UserProfile>
+                <UserProfile path="/user-profile" routing="path">
+                    <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                        <MyCustomPageContent />
+                    </UserProfile.Page>
+                    <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+                    <UserProfile.Page label="account" />
+                    <UserProfile.Page label="security" />
+                </UserProfile>
             );
 
             export default UserProfilePage;
@@ -237,14 +241,14 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
             import { CustomIcon, Icon } from "../icons";
 
             const UserProfilePage = () => (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                    <MyCustomPageContent />
-                </UserProfile.Page>
-                <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                <UserProfile.Page label="account" />
-                <UserProfile.Page label="security" />
-            </UserProfile>
+                <UserProfile path="/user-profile" routing="path">
+                    <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                        <MyCustomPageContent />
+                    </UserProfile.Page>
+                    <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+                    <UserProfile.Page label="account" />
+                    <UserProfile.Page label="security" />
+                </UserProfile>
             );
 
             export default UserProfilePage;
@@ -259,14 +263,14 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
         import { CustomIcon, Icon } from "../icons";
 
         const UserProfilePage = () => (
-        <UserProfile path="/user-profile" routing="path">
-            <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                <MyCustomPageContent />
-            </UserProfile.Page>
-            <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-            <UserProfile.Page label="account" />
-            <UserProfile.Page label="security" />
-        </UserProfile>
+            <UserProfile path="/user-profile" routing="path">
+                <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                    <MyCustomPageContent />
+                </UserProfile.Page>
+                <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+                <UserProfile.Page label="account" />
+                <UserProfile.Page label="security" />
+            </UserProfile>
         );
 
         export default UserProfilePage;
@@ -281,14 +285,14 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
 
         export default function UserProfilePage() {
             return (
-            <UserProfile path="/user-profile" routing="path">
-                <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                    <MyCustomPageContent />
-                </UserProfile.Page>
-                <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
-                <UserProfile.Page label="account" />
-                <UserProfile.Page label="security" />
-            </UserProfile>
+                <UserProfile path="/user-profile" routing="path">
+                    <UserProfile.Page label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                        <MyCustomPageContent />
+                    </UserProfile.Page>
+                    <UserProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
+                    <UserProfile.Page label="account" />
+                    <UserProfile.Page label="security" />
+                </UserProfile>
             );
         }
         ```
@@ -307,11 +311,11 @@ The above example will result in the following order:
 - The first page in the list will be rendered under the root path `/` (its `url` will be ignored) and the Clerk pages will be rendered under the path `/account`.
 - The first item in the list cannot be a `<UserProfile.Link />` component.
 
-## Using custom pages with the `<UserButton />` component
+### Using custom pages with the `<UserButton />` component
 
 If you are using the `<UserButton />` component with the default props (where the `UserProfile` opens as a modal), then you should also be providing these custom pages as children to the component (using the `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` components respectively).
 
-## Usage
+### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
@@ -319,23 +323,23 @@ If you are using the `<UserButton />` component with the default props (where th
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/components/Header.tsx"
-            'use client';
+            "use client";
 
             import { UserButton } from "@clerk/nextjs";
             import { MyCustomPageContent } from "../components";
             import { CustomIcon, Icon } from "../icons";
 
             const Header = () => (
-            <header>
-                <UserButton afterSignOutUrl='/'>
-                    <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </UserButton.UserProfilePage>
-                    <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <UserButton.UserProfilePage label="account" />
-                    <UserButton.UserProfilePage label="security" />
-                </UserButton>
-            </header>
+                <header>
+                    <UserButton afterSignOutUrl='/'>
+                        <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                            <MyCustomPageContent />
+                        </UserButton.UserProfilePage>
+                        <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+                        <UserButton.UserProfilePage label="account" />
+                        <UserButton.UserProfilePage label="security" />
+                    </UserButton>
+                </header>
             );
 
             export default Header;
@@ -347,16 +351,16 @@ If you are using the `<UserButton />` component with the default props (where th
             import { CustomIcon, Icon } from "../icons";
 
             const Header = () => (
-            <header>
-                <UserButton afterSignOutUrl='/'>
-                    <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                        <MyCustomPageContent />
-                    </UserButton.UserProfilePage>
-                    <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                    <UserButton.UserProfilePage label="account" />
-                    <UserButton.UserProfilePage label="security" />
-                </UserButton>
-            </header>
+                <header>
+                    <UserButton afterSignOutUrl='/'>
+                        <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                            <MyCustomPageContent />
+                        </UserButton.UserProfilePage>
+                        <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+                        <UserButton.UserProfilePage label="account" />
+                        <UserButton.UserProfilePage label="security" />
+                    </UserButton>
+                </header>
             );
 
             export default Header;
@@ -371,16 +375,16 @@ If you are using the `<UserButton />` component with the default props (where th
         import { CustomIcon, Icon } from "../icons";
 
         const Header = () => (
-        <header>
-            <UserButton afterSignOutUrl='/'>
-                <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
-                    <MyCustomPageContent />
-                </UserButton.UserProfilePage>
-                <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
-                <UserButton.UserProfilePage label="account" />
-                <UserButton.UserProfilePage label="security" />
-            </UserButton>
-        </header>
+            <header>
+                <UserButton afterSignOutUrl='/'>
+                    <UserButton.UserProfilePage label="Custom Page" url="custom" labelIcon={<CustomIcon />}>
+                        <MyCustomPageContent />
+                    </UserButton.UserProfilePage>
+                    <UserButton.UserProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
+                    <UserButton.UserProfilePage label="account" />
+                    <UserButton.UserProfilePage label="security" />
+                </UserButton>
+            </header>
         );
 
         export default Header;
