--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -236,6 +236,103 @@ Closes the user profile overlay.
 function closeUserProfile(): void;
 ```
 
+## Custom Pages
+
+User profile can be customized by adding custom pages to it. Custom pages are added to the user profile using the `customPages` prop.
+
+<CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
+    ```typescript {11}
+    import Clerk from '@clerk/clerk-js';
+
+    const clerk = new Clerk('pk_[publishable_key]');
+    await clerk.load();
+
+    clerk.openUserProfile({
+        customPages: [
+            {
+                url: "custom-page",
+                label: "Custom Page",
+                mountIcon: (el) => {
+                    el.innerHTML = "👋";
+                },
+                unmountIcon: (el) => {
+                    el.innerHTML = "";
+                },
+                mount: (el) => {
+                    el.innerHTML = `
+                          <h1><b>Custom Page</b></h1>
+                          <p>This is the content of the custom page.</p>
+                          `;
+                },
+                unmount: (el) => {
+                    el.innerHTML = "";
+                },
+            },
+            {
+                url: "/other-page",
+                label: "Other Page",
+                mountIcon: (el) => {
+                    el.innerHTML = "🌐";
+                },
+                unmountIcon: (el) => {
+                    el.innerHTML = "";
+                },
+            }
+        ]
+    });
+
+    ```
+
+    ```html {14}
+    <script>
+        const script = document.createElement('script');
+        script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+        script.async = true;
+        script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+        script.addEventListener('load', async function () {
+            await window.Clerk.load();
+
+            window.Clerk.openUserProfile({
+                customPages: [
+                    {
+                        url: "custom-page",
+                        label: "Custom Page",
+                        mountIcon: (el) => {
+                            el.innerHTML = "👋";
+                        },
+                        unmountIcon: (el) => {
+                            el.innerHTML = "";
+                        },
+                        mount: (el) => {
+                        el.innerHTML = `
+                              <h1><b>Custom Page</b></h1>
+                              <p>This is the content of the custom page.</p>
+                              `;
+                        },
+                        unmount: (el) => {
+                            el.innerHTML = "";
+                        },
+                    },
+                    {
+                        url: "/other-page",
+                        label: "Other Page",
+                        mountIcon: (el) => {
+                            el.innerHTML = "🌐";
+                        },
+                        unmountIcon: (el) => {
+                            el.innerHTML = "";
+                        },
+                    }
+                ]
+            });
+
+        });
+        document.body.appendChild(script);
+    </script>
+    ```
+</CodeBlockTabs>
+
 ## `UserProfileProps`
 
 All props below are optional.
