Added Reply and Retry to the Webhooks docs.

--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -112,6 +112,38 @@ const handler = req => {
 }
 ```
 
+## Handling Delivery Issues
+
+### Retry
+
+SVIX will use a set schedule and retry any webhooks that fail. Please see the SVIX docs for the [Retry Schedule](https://docs.svix.com/retries) to see the up-to-date schedule. If SVIX is attempting and failing to send a webhook, and that endpoint is removed or disabled from the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard then the attempts will also be disabled.
+
+### Replay
+
+If a webhook message or multiple webhook messages fail to send, you have an option to reply the webhook messages. This protects against your service having downtime or against a misconfigured endpoint. To replay webhook messages, go to the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section in your Dashboard. Select the affected Endpoint. From the 'Attempted Messages' section, locate a message you want to reply and click the menu icon on the right side and then select 'Replay'.
+
+<Images
+  src="/docs/images/integrations/webhooks/replay-button.png"
+  width={1020}
+  height={664}
+  alt="The Replay option for failed webhook messages."
+/>
+
+#### Replay Options
+
+From the Replay Messages menu, you will have 3 options. 
+1. Resend the specific message you selected.
+2. Resend all failed messages since the first failed message in that date range. 
+3. Resend all missing messages since the first failed message in that date range.
+
+<Images
+  src="/docs/images/integrations/webhooks.replay-options.png"
+  width={54}
+  height={512}
+  alt="The Replay menu, for replaying failling or missing webhook messages."
+/>
+
+
 ## How to use webhooks
 
 You can find a guide on how to use webhooks to sync your data to your database [here](/docs/users/sync-data).
