Properly apply content changes after file move

--- a/docs/testing/postman-or-insomnia.mdx
+++ b/docs/testing/postman-or-insomnia.mdx
@@ -46,7 +46,7 @@ alt="Grab token from the console"
 
 ## Using Postman or Insomnia
 
-Open Postman/Insomnia and create a new request. Configure the correct method and route. In the Authorization tab, select Bearer Token. Paste the token you copied from the console as the Bearer Token. Your request will now authenticate as the user you created the token with.
+Open Postman/Insomnia and create a new request. In the URL field for both Postman and Insomnia enter the URL and route for the API Route you want to test. To the immediate left of the URL select the method for your API Route, or if your API Route handles multiple methods select you want to test. In the Authorization tab, select Bearer Token. Paste the token you copied from the console as the Bearer Token. Your request will now authenticate as the user you created the token with.
 
 <Images
 src="/docs/images/backend-requests/testing/protected-route.png"
@@ -58,6 +58,4 @@ alt="Testing a Protected Route"
 ## Variables
 
 You can create a Collection in Postman or Insomnia, and inside of that Collection add Variables (Postman) or Environment Variable (Insomnia). These let you use the same token in multiple requests, and easily store tokens for multiple users. This is great for testing different features in your application by changing the token/user you are testing with. You can read more about Variables for [Postman here](https://learning.postman.com/docs/sending-requests/variables/) and for [Insomnia here](https://docs.insomnia.rest/insomnia/environment-variables).
-
-
 
