--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -16,8 +16,10 @@ This is a class that represents an organization. It's returned from the [`create
 | `slug` | `string \| null` | The organization slug. If supplied, it must be unique for the instance. |
 | `logoUrl` | `string \| null` | The full URL for the organization logo. (deprecated in favor of `imageUrl`) |
 | `imageUrl` | `string` | Holds the organization logo or default logo. |
+| `hasImage` | `boolean` | A getter boolean to check if the organization has a uploaded image. `false` if Clerk is displaying an avatar for the organization. |
 | `membersCount` | `number` | The number of members the associated organization contains. |
 | `pendingInvitationsCount` | `number` | The number of pending invitations to users to join the organization. |
+| `adminDeleteEnabled` | `boolean` | A getter boolean to check if the admin of the organization can delete it. |
 | `createdAt` | `Date` | Date of the time the organization was created. |
 | `updatedAt` | `Date` | Date of the last time the user was updated. |
 | `publicMetadata` | `object` | Additional information about the organization that can be read through the Frontend API, but written only from the Backend API. |
